--- a/bedrock/firefox/templates/firefox/campaign/unfck/index.html
+++ b/bedrock/firefox/templates/firefox/campaign/unfck/index.html
@@ -19,16 +19,18 @@
 
 {% set referrals = '?utm_source=www.mozilla.org&utm_medium=referral&utm_campaign=firefox-unfck' %}
 
-{% macro item(title=None, info=None, id=None, src=None, src_still=None, include_cta=False, alt='',
+{% macro item(title=None, info=None, id=None, src_name=None, include_cta=False, alt='',
               link_text=None, link_url=None, link_include_utms=True, link_is_external=True) -%}
+    {% set src_still = static('img/firefox/campaign/unfck/en/still/' + src_name + '.jpg') %}
+    {% set src_gif = static('img/firefox/campaign/unfck/en/' + src_name + '.gif') %}
+    {% set src_high_res = static('img/firefox/campaign/unfck/en/' + src_name + '-high-res.gif') %}
     <div id="{{ id }}" class="c-item-unfck">
       <h3 class="c-item-title">{{ title }}</h3>
       <div class="c-item-img">
         <picture class="c-item-gif">
-          {% if src_still %}
           <source srcset="{{ src_still }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="280" height="280"></source>
-          {% endif %}
-          <img src="{{ src }}" loading="lazy" width="280" height="280" alt="{{ alt }}">
+          <source srcset="{{ src_gif }} 1x, {{ src_high_res }} 1.5x" loading="lazy" width="280" height="280"></source>
+          <img src="{{ src_gif }}" loading="lazy" width="280" height="280" alt="{{ alt }}">
         </picture>
       </div>
       <div class="c-item-desc">
@@ -95,8 +97,7 @@
       alt='Click the unfck button.',
       include_cta=True,
       id='share',
-      src=static('img/firefox/campaign/unfck/en/button.gif'),
-      src_still=static('img/firefox/campaign/unfck/en/still/button.png')
+      src_name='button'
     ) %}
       <p class="c-item-cta">
         <a id="js-tweet" class="mzp-c-cta-link" href="{{ tw }}" target="_blank" rel="external noopener" data-cta-type="link" data-cta-text="Checklist: share">Tweet this</a></p>
@@ -114,8 +115,7 @@
       link_url='https://addons.mozilla.org/firefox/addon/ad-observer/',
       link_include_utms=True,
       id='poli',
-      src=static('img/firefox/campaign/unfck/en/vote.gif'),
-      src_still=static('img/firefox/campaign/unfck/en/still/vote.png'),
+      src_name='vote',
     ) %}{% endcall %}
 
     {% call item(
@@ -124,14 +124,13 @@
       alt='One fck given. High five!',
       include_cta=True,
       id='social',
-      src=static('img/firefox/campaign/unfck/en/highfive.gif'),
-      src_still=static('img/firefox/campaign/unfck/en/still/highfive.png'),
+      src_name='highfive'
       ) %}
       <p class="c-item-cta">
         <a class="mzp-c-cta-link" href="#" target="_blank" rel="external noopener" data-cta-type="link" data-cta-text="Checklist: netflix">Watch the Doc</a></p>
       </p>
       <p class="c-item-cta">
-        <a class="mzp-c-cta-link" href="#" target="_blank" rel="external noopener" data-cta-type="link" data-cta-text="Checklist: reading list">Get the Reading List</a></p>
+        <a class="mzp-c-cta-link" href="#" target="_blank" rel="external noopener" data-cta-type="link" data-cta-text="Checklist: reading list">Read Diverse Voices</a></p>
       </p>
     {% endcall %}
 
@@ -143,8 +142,7 @@
       link_url='https://addons.mozilla.org/firefox/addon/facebook-container/',
       link_include_utms=True,
       id='contain',
-      src=static('img/firefox/campaign/unfck/en/phone.gif'),
-      src_still=static('img/firefox/campaign/unfck/en/still/phone.png'),
+      src_name='phone',
     ) %}{% endcall %}
 
     {% call item(
@@ -155,8 +153,7 @@
       link_url='https://addons.mozilla.org/en-US/firefox/addon/regretsreporter/',
       link_include_utms=True,
       id='regrets',
-      src=static('img/firefox/campaign/unfck/en/computer.gif'),
-      src_still=static('img/firefox/campaign/unfck/en/still/computer.png'),
+      src_name='computer',
     ) %}{% endcall %}
 
     {% call item(
@@ -166,8 +163,7 @@
       link_text='Meet our Friends',
       link_url='#',
       id='join',
-      src=static('img/firefox/campaign/unfck/en/un.gif'),
-      src_still=static('img/firefox/campaign/unfck/en/still/un.png'),
+      src_name='un',
     ) %}{% endcall %}
 
   </div>
@@ -200,7 +196,7 @@
         title='People over profits. Always.',
         ga_title='card-mozilla',
         image_url=None,
-        link_url='https://foundation.mozilla.org/' + referrals,
+        link_url=url('mozorg.about.manifesto'),
         heading_level=3,
         desc='Firefox was founded in 2002 for the expressed purpose of breaking up a monopoly. Our parent company is a non-profit. The Wall Street Journal has called us “the Bernie Sanders” of browsers, and we’re here for it. Because we’ll never stop fighting for what we believe in: a safe, accessible, and welcoming internet for all.',
         cta='Meet Mozilla'
@@ -217,16 +213,19 @@
       </div>
       <div class="c-box-gifs">
         <picture class="c-box-gif" id="mug">
-          <source srcset="{{ static('img/firefox/campaign/unfck/en/still/mug.png') }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="344" height="344"></source>
-          <img src="{{ static('img/firefox/campaign/unfck/en/mug.gif') }}" alt="Time to unfck the internet." loading="lazy" width="344" height="344">
+          <source srcset="{{ static('img/firefox/campaign/unfck/en/still/mug.jpg') }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="280" height="280"></source>
+          <source srcset="{{ static('img/firefox/campaign/unfck/en/mug.gif') }} 1x, {{ static('img/firefox/campaign/unfck/en/mug-high-res.gif') }} 1.5x" loading="lazy" width="280" height="280"></source>
+          <img src="{{ static('img/firefox/campaign/unfck/en/mug.gif') }}" alt="Time to unfck the internet." loading="lazy" width="280" height="280">
         </picture>
         <picture class="c-box-gif" id="smiley">
-          <source srcset="{{ static('img/firefox/campaign/unfck/en/still/smiley.png') }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="344" height="344"></source>
-          <img src="{{ static('img/firefox/campaign/unfck/en/smiley.gif') }}" alt="An unfcked internet is a happy internet." loading="lazy" width="344" height="344">
+          <source srcset="{{ static('img/firefox/campaign/unfck/en/still/smiley.jpg') }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="280" height="280"></source>
+          <source srcset="{{ static('img/firefox/campaign/unfck/en/smiley.gif') }} 1x, {{ static('img/firefox/campaign/unfck/en/smiley-high-res.gif') }} 1.5x" loading="lazy" width="280" height="280"></source>
+          <img src="{{ static('img/firefox/campaign/unfck/en/smiley.gif') }}" alt="An unfcked internet is a happy internet." loading="lazy" width="280" height="280">
         </picture>
         <picture class="c-box-gif" id="todo">
-          <source srcset="{{ static('img/firefox/campaign/unfck/en/still/todo.png') }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="344" height="344"></source>
-          <img src="{{ static('img/firefox/campaign/unfck/en/todo.gif') }}" alt="To do: wake up, breakfast, unfck the internet." loading="lazy" width="344" height="344">
+          <source srcset="{{ static('img/firefox/campaign/unfck/en/still/todo.jpg') }}" media="(prefers-reduced-motion: reduce)" loading="lazy" width="280" height="280"></source>
+          <source srcset="{{ static('img/firefox/campaign/unfck/en/todo.gif') }} 1x, {{ static('img/firefox/campaign/unfck/en/todo-high-res.gif') }} 1.5x" loading="lazy" width="280" height="280"></source>
+          <img src="{{ static('img/firefox/campaign/unfck/en/todo.gif') }}" alt="To do: wake up, breakfast, unfck the internet." loading="lazy" width="280" height="280">
         </picture>
       </div>
     </div>
